got all controllers working and full flow